Fix umlaut dots not showing in Firefox
Fixes #39

--- a/client/src/EditItemComponent.css
+++ b/client/src/EditItemComponent.css
@@ -33,6 +33,7 @@
   font-family: inherit;
   border: 0;
   max-height: 2.4rem;
+  padding: 3px 0;
   width: 100%;
   max-width: 100%;
   overflow: hidden;
